# vault-desktop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: main.py
app/core/: __init__.py  app_paths.py  config.py  local_settings.py  pin_bootstrap.py  session.py
app/services/: __init__.py  api_client.py  desktop_service.py  file_chunk_builder.py  file_crypto_bridge.py  item_crypto_bridge.py  password_generator.py  quick_text_crypto.py  signup_with_recovery_api.py  vault_gateway.py
app/ui/: dashboard_formatters.py  file_download_worker.py  file_upload_worker.py  item_editor_dialog.py  main_window.py  recovery_key_dialog.py  (+3 more)
docs/: install-linux.md  install-windows.md
release/: vault-desktop-linux.tar.gz.sha256
scripts/: package-linux.sh  package-windows.ps1  run-dev.sh
tests/: test_api_client.py  test_config.py  test_dashboard_formatters.py  test_desktop_service.py  test_file_chunk_builder.py  test_file_crypto_bridge.py  test_file_download_roundtrip.py  test_file_download_worker.py  test_file_upload_worker.py  test_item_crypto_bridge.py  test_item_delete_desktop_core.py  test_item_editor_dialog.py  test_item_prepare_desktop_core.py  test_item_update_desktop_core.py  test_local_settings.py  test_main_window_auth_status.py  test_main_window_pin_ui_state.py  test_network_action_worker.py  test_password_generator.py  test_pin_bootstrap.py  test_pin_bootstrap_desktop_service.py  test_pin_trust_desktop_service.py  test_quick_text_crypto.py  test_recovery_key_dialog.py  test_session.py  test_signup_dialog.py  test_signup_with_recovery_api.py  test_vault_gateway.py
